# genai-multimodal-api

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: audio.py  context.py  health.py  image.py  moderation.py  pipelines.py  text.py  vision.py
backend/app/models/: schemas.py
backend/app/services/: audio_service.py  context_protocol.py  image_generation.py  moderation.py  pipeline_engine.py  text_generation.py  vision_service.py
backend/app/utils/: media.py  streaming.py
backend/tests/: conftest.py  test_api.py  test_context.py  test_moderation.py  test_pipeline.py
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/image/: route.ts
web/app/api/moderation/: route.ts
web/app/api/pipeline/: route.ts
web/app/api/text/: route.ts
web/app/api/vision/: route.ts
web/app/demo/: page.tsx
web/components/: CodeExample.tsx  Footer.tsx  Header.tsx  ModalityCard.tsx  MultiModalDemo.tsx  PipelineDiagram.tsx
